package pers.xf.learn.designpattern.compositepattern;

public class ConfigurationContainer {

}
